# pendulum_simulation

./: CMakeLists.txt  README.md  main.cpp
include/: application.h  application.hpp  canvas.h  canvas.hpp  canvas_for_pendulum.h  canvas_for_pendulum.hpp  gauss_elimination.hpp  pendulum.h  pendulum.hpp
src/: CMakeLists.txt  application.cpp  canvas.cpp  canvas_for_pendulum.cpp  gauss_elimination.cpp  pendulum.cpp
